initial commit, program is at version 0.4

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Day 4 Lectures</title>
-    <script src="script.js"></script>
+    <script src="scripts/garage.js"></script>
   </head>
   <body>
-
+    <h1> My garage</h1>
+    <input type ="text" id="yearIn" value="" placeholder ="Year">
+    <input type="text" id="makeIn" value=""placeholder ="Make">
+    <input type="text" id="modelIn" value="" placeholder ="Model">
+    <input type="text" id="picIn" value="" placeholder ="Picture URL">
+    <input type="text" id="descIn" value="" placeholder ="Description">
+    <button onclick="addCar()"> Add Car</button>
   </body>
 </html>
