garage project through version 0.5

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <input type="text" id="modelIn" value="" placeholder ="Model">
     <input type="text" id="picIn" value="" placeholder ="Picture URL">
     <input type="text" id="descIn" value="" placeholder ="Description">
-    <button onclick="addCar()"> Add Car</button>
+    <button onclick="addCar()"> Park it like it's Hot!</button>
+    <ul id ="allCars">
+      <li>NONE</li>
+    </ul>
   </body>
 </html>
