--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <input type="text" id="picIn" value="" placeholder ="Picture URL">
     <input type="text" id="descIn" value="" placeholder ="Description">
     <button onclick="addCar()"> Park it like it's Hot!</button>
-    <ul id ="allCars">
-      <li>NONE</li>
-    </ul>
+    <div id ="allCars">
+      <h2> </h2>
+
+    </div>
   </body>
 </html>
