added form functionality to html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   </head>
   <body>
     <h1> My garage</h1>
-    <input type ="text" id="yearIn" value="" placeholder ="Year">
-    <input type="text" id="makeIn" value=""placeholder ="Make">
-    <input type="text" id="modelIn" value="" placeholder ="Model">
-    <input type="text" id="picIn" value="" placeholder ="Picture URL">
-    <input type="text" id="descIn" value="" placeholder ="Description">
-    <button onclick="addCar()"> Park it like it's Hot!</button>
+    <form>
+    <input type ="text" id="yearIn" value=""> Year<br>
+    <input type="text" id="makeIn" value=""> Make<br>
+    <input type="text" id="modelIn" value=""> Model <br>
+    <input type="text" id="picIn" value=""> Picture URL<br>
+    <input type="text" id="descIn" value=""> Description<br>
+  </form>
+  <button onclick="addCar()"> Park it like it's Hot!</button>
     <div id ="allCars">
+      <h1></h1>
       <h2> </h2>
 
     </div>
