Update JS to use jQuery and vanilla. Lost remove button functionality

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Day 4 Lectures</title>
+    <script src="scripts/vendor/jquery-3.1.0.min.js"></script>
     <script src="scripts/garage.js"></script>
   </head>
   <body>
@@ -12,7 +13,7 @@
     <input type="text" id="modelIn" value="" placeholder ="Model">
     <input type="text" id="picIn" value="" placeholder ="Picture URL">
     <input type="text" id="descIn" value="" placeholder ="Description">
-    <button onclick="addCar()"> Park it like it's Hot!</button>
+    <button id="addCar"> Park it like it's Hot!</button>
     <div id ="allCars">
       <h2> </h2>
 
